# mokumoku_factory

./: .gitignore  README.md  experiment.py  game_object.py  gopro_ctrl.py  image_show.py  index.html  mokumoku.py  mokumoku.pyxres  pyproject.toml
